--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="p3RlNffhUS18Pu69lLRr6g_Q25aN4NzsEYnl3_9abaw" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/src/index.css" />
   </head>
